<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="number"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:defaultValue="@string/pref_units_default"
        android:dialogTitle="@string/pref_units_dialog"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_show_notification_default"
        android:key="@string/pref_show_notification_key"
        android:summaryOff="@string/pref_show_notification_false"
        android:summaryOn="@string/pref_show_notification_true"
        android:title="@string/pref_show_notification_label" />

</PreferenceScreen>